Reformat code (specially for primitive FurnitureGenerator (and saver)