@@ -1,13 +1,11 @@
 package com.pawel.furniturewithcomponentsrepository.domain.utils;
 
-import com.pawel.furniturewithcomponentsrepository.domain.configurations.service.ConfigurationService;
 import com.pawel.furniturewithcomponentsrepository.domain.element.model.Element;
 import com.pawel.furniturewithcomponentsrepository.domain.element.service.ElementService;
 import com.pawel.furniturewithcomponentsrepository.domain.furniture.model.Furniture;
 import com.pawel.furniturewithcomponentsrepository.domain.furniture.service.FurnitureService;
 import com.pawel.furniturewithcomponentsrepository.domain.material.model.Material;
 import com.pawel.furniturewithcomponentsrepository.domain.material.service.MaterialService;
-import com.pawel.furniturewithcomponentsrepository.domain.part.service.PartService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.event.ContextRefreshedEvent;
@@ -17,6 +15,7 @@ import org.springframework.stereotype.Component;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -31,20 +30,28 @@ import java.util.stream.Stream;
 public class FurnitureGenerator {
 
     private static final String ELEMENTS_CSV_FILE_NAME = "elements.csv";
+    private static final String SPLIT_REGEX = ";";
 
-    private final ElementService elementService;
-    private final PartService partService;
-    private final ConfigurationService configurationService;
+
     private final FurnitureService furnitureService;
     private final MaterialService materialService;
+    private final ElementService elementService;
 
 
     @EventListener(ContextRefreshedEvent.class)
     public void handleContextRefresh(ContextRefreshedEvent event) {
-        // elementService.findAllElements().forEach(System.out::println);
         log.info("------------------> method handle ContextRefresh");
-        Set<String> linesFromFile = new HashSet<>(Objects.requireNonNull(readLinesFromFile()));
-        readAndSaveDataFromLines(linesFromFile);
+        long elementsNr = elementService.findAllElements().size();
+        Set<String> linesFromFile = new HashSet<>(readLinesFromFile());
+        if (elementsNr == linesFromFile.size()) {
+            log.info("There is {} elements in base, and lines with data: {} - saving skipped!", elementsNr,
+                    linesFromFile.size());
+            return;
+        }
+        Set<Element> elements = readElementsFromCsvLines(linesFromFile);
+        elements.forEach(System.out::println);
+        saveElements(elements).forEach(System.out::println);
+
         log.info("------------------>  STOP method handle ContextRefresh");
     }
 
@@ -53,26 +60,22 @@ public class FurnitureGenerator {
         try {
             Path path = Paths.get(Objects.requireNonNull(getClass().getClassLoader()
                     .getResource(ELEMENTS_CSV_FILE_NAME)).toURI());
-
             lines = Files.lines(path);
-
             return lines
                     .skip(1)
                     .collect(Collectors.toList());
-
         } catch (Exception e) {
             e.printStackTrace();
         } finally {
             assert lines != null;
             lines.close();
         }
-        return null;
+        return new ArrayList<>();
     }
 
-    private void readAndSaveDataFromLines(Set<String> lines) {
+    private Set<Element> readElementsFromCsvLines(Set<String> lines) {
         List<String[]> splitedLines = lines.stream()
-                .map(line -> line.split(","))
-                .collect(Collectors.toList());
+                .map(line -> line.split(SPLIT_REGEX)).toList();
 
         Set<Element> elements = new HashSet<>();
 
@@ -82,31 +85,48 @@ public class FurnitureGenerator {
         String hight;
         String thickness;
         String suffix;
+        String descr;
 
-        for (int i = 0; i < splitedLines.size(); i++) {
-            String[] strings = splitedLines.get(i);
-            if (strings.length == 5) {
-                model = strings[0];
-                material = strings[1];
-                length = strings[2];
-                hight = strings[3];
-                thickness = strings[4];
-                // suffix = strings[5];
+        for (String[] strings : splitedLines) {
+            if (strings.length == 6) {
+                model = strings[1];
+                material = strings[2];
+                length = strings[3];
+                hight = strings[4];
+                thickness = strings[5];
+                suffix = null;
+                descr = null;
+            } else if (strings.length == 7) {
+                model = strings[1];
+                material = strings[2];
+                length = strings[3];
+                hight = strings[4];
+                thickness = strings[5];
+                suffix = strings[6];
+                descr = null;
             } else {
-                model = strings[0];
-                material = strings[1];
-                length = strings[2];
-                hight = strings[3];
-                thickness = strings[4];
-                suffix = strings[5];
+                model = strings[1];
+                material = strings[2];
+                length = strings[3];
+                hight = strings[4];
+                thickness = strings[5];
+                suffix = strings[6];
+                descr = strings[7];
             }
 
-        }
-        elements.add(Element.builder()
-                //          .furniture()
+            Element element = Element.builder()
+                    .furnitureName(model)
+                    .material(new Material(null, material))
+                    .length(Integer.parseInt(length))
+                    .height(Integer.parseInt(hight))
+                    .thickness(Integer.parseInt(thickness))
+                    .suffix(suffix)
+                    .description(descr)
+                    .build();
 
-                .build());
-        System.out.println();
+            elements.add(element);
+        }
+        return elements;
     }
 
     private Material saveMaterialIfNotExist(String name) {
@@ -115,7 +135,6 @@ public class FurnitureGenerator {
             materialService.save(new Material(null, name));
         }
         return materialService.findMaterialByName(name).get();
-
     }
 
     private Furniture saveFurnitureIfNotExist(String name) {
@@ -126,5 +145,29 @@ public class FurnitureGenerator {
                     .build());
         }
         return furnitureService.findFurnitureByName(name).get();
+    }
+
+    private List<Element> saveElements(Set<Element> elements) {
+        return elements.stream()
+                .map(element -> {
+                    try {
+                        Material material = saveMaterialIfNotExist(element.getMaterial().getName());
+                        Furniture furniture = saveFurnitureIfNotExist(element.getFurnitureName());
+                        return elementService.save(Element.builder()
+                                .furnitureName(furniture.getName())
+                                .material(material)
+                                .length(element.getLength())
+                                .height(element.getHeight())
+                                .thickness(element.getThickness())
+                                .suffix(element.getSuffix())
+                                .description(element.getDescription())
+                                .build());
+                    } catch (Exception e) {
+                        log.warn(e.getMessage());
+                    }
+                    return null;
+                })
+                .toList();
+
     }
 }
